Angular y node working

--- a/package.json
+++ b/package.json
@@ -4,21 +4,45 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm prune"
+    "preinstall": "npm prune",
+    "postinstall": "bower prune; bower install; grunt githooks"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "hotnode": "0.0.8",
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
+    "express": "^4.17.1",
     "express-handlebars": "latest",
+    "hotnode": "0.0.8",
+    "html-minifier": "latest",
+    "js-yaml": "latest",
     "lodash": "latest",
     "morgan": "~1.5.1",
-    "stylus": "latest",
-    "js-yaml": "latest",
-    "html-minifier": "latest"
+    "serve-favicon": "^2.5.0",
+    "stylus": "latest"
+  },
+  "devDependencies": {
+    "bower": "^1.8.8",
+    "chai": "latest",
+    "grunt": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-stylus": "latest",
+    "grunt-githooks": "latest",
+    "grunt-jscs": "latest",
+    "grunt-karma": "latest",
+    "grunt-mocha-test": "latest",
+    "grunt-shell": "latest",
+    "karma": "latest",
+    "karma-chai": "latest",
+    "karma-html2js-preprocessor": "latest",
+    "karma-mocha": "latest",
+    "karma-mocha-reporter": "latest",
+    "karma-phantomjs-launcher": "latest",
+    "karma-sinon": "latest",
+    "mocha": "latest",
+    "rewire": "latest",
+    "sinon": "latest"
   }
 }
