--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.10.2",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "^4.17.1",
