--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-yaml": "latest",
     "lodash": "latest",
     "morgan": "~1.5.1",
+    "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
     "stylus": "latest",
     "unirest": "^0.6.0"
