--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "cookie-parser": "~1.3.3",
+    "cors": "^2.8.5",
     "debug": "~2.1.1",
     "express": "^4.17.1",
     "express-handlebars": "latest",
     "hotnode": "0.0.8",
     "html-minifier": "latest",
+    "http": "0.0.1-security",
     "js-yaml": "latest",
     "lodash": "latest",
     "morgan": "~1.5.1",
     "request": "^2.88.2",
+    "save": "^2.4.0",
     "serve-favicon": "^2.5.0",
     "stylus": "latest",
     "unirest": "^0.6.0"
